--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -45,7 +45,7 @@ a:hover {
 h1,
 h2
 {
-  font-family: Myfont;
+  font-family: Myfont, 'Cousine';
   src: url(font/Myfont.otf);
   font-size: 45px;
   font-weight: 700;
