--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -27,8 +27,6 @@ a:hover {
   cursor: url("cursor/minimal/link.cur"), auto;
 }
 
-.nav-link {
-}
 
 ::-moz-selection {   /* Code for Firefox */
   color: #F5B5DF;
@@ -45,10 +43,10 @@ a:hover {
 h1,
 h2
 {
-  font-family: Myfont, 'Cousine';
+  font-family: Myfont;
   src: url(font/Myfont.otf);
-  font-size: 45px;
-  font-weight: 700;
+  font-size: 50px;
+  font-weight: 600;
 }
 
 h3,
@@ -191,9 +189,17 @@ h6
   #header {
     left: -300px;
   }
-
   #main {
     margin-left: 0;
+  }
+}
+
+/* Only: Mobile devices (320px — 480px); Tablets (481px — 768px)*/
+@media (min-width:0px) and (max-width: 450px) {
+  h2 {
+    font-family: 'Cousine', monospace;
+    font-size: 35px;
+    font-weight: 500;
   }
 }
 
@@ -385,7 +391,7 @@ h6
 
 /*--------------------------------------------------------------
 # Hero Section
---------------------------------------------------------------*/
+--------------------------------------------------------------
 #hero {
   width: 100%;
   height: 100vh;
@@ -443,16 +449,9 @@ h6
     font-size: 28px;
     line-height: 36px;
   }
+*/
 
-  #hero h2 {
-    font-size: 18px;
-    line-height: 24px;
-    margin-bottom: 30px;
-    font-family: 'Cousine', monospace;
-    font-family: Myfont;
-    src: url(font/Myfont.otf);
-  }
-}
+
 
 /*--------------------------------------------------------------
 # Sections General
