--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -48,7 +48,7 @@ a:hover {
 h1,
 h2
 {
-  font-family: Myfont;
+  font-family: 'Wix Madefor Display', sans-serif;
   font-size: 45px;
   font-weight: 600;
 }
